--- a/src/sass/block/_client.sass
+++ b/src/sass/block/_client.sass
@@ -10,6 +10,7 @@
     &__wrapper
         display: flex 
         flex-direction: column
+        padding: 0 20px 0 20px
     &__block
         display: flex
         margin-top: 60px
