--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -11,10 +11,27 @@
     .consultation
         &__wrapper
             padding: 0 0 0 20px
+    .catalog
+        &__content
+            justify-content: center
 @media (max-width: 767px)
     .advantages
+    .carousel
+        &__inner
+            width: 520px
+        div
+            img
+                width: 500px
+    .catalog
+       &__tab
+        width: 170px
+    .client
+        &__text
+            margin-left: 30px
 @media (max-width: 575px)
     .advantages
+        &__header
+            font-size: 25px
         &__wrapper
             flex-direction: column
             align-items: center
@@ -39,20 +56,18 @@
         &__icon
             margin-top: 20px
         &__header
-            font-size: 35px
+            font-size: 30px
             line-height: 45px
             text-align: center
         &__subheader
-            font-size: 20px
+            font-size: 16px
             text-align: center
     .consultation
         &__header
             text-align: center
-            font-size: 33px
+            font-size: 30px
         &__subheader
             text-align: center
-        &__wrapper
-            align-items: center
     .button
         &_submit
             width: 280px 
@@ -65,4 +80,24 @@
         div
             img
                 width: 300px
+    .catalog
+        &__header
+            font-size: 25px
+        &__tab
+            font-size: 15px
+            margin-top: 10px
+        &__tabs
+            flex-direction: column
+    .client
+        &__header
+            font-size: 25px
+        &__block
+            flex-direction: column
+            align-items: center
+        &__text
+            margin-top: 20px
+        
+       
+        
+        
 
