--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -96,6 +96,16 @@
             align-items: center
         &__text
             margin-top: 20px
+    .footer
+        &__info
+            width: 290px
+        &__addr
+            font-size: 15px
+        &__phone
+            font-size: 15px
+        &__social-item 
+            width: 48px
+            height: 48px
         
        
         
