--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,6 +8,7 @@
 @import "block/_carousel"
 @import "block/_catalog"
 @import "block/_client"
+@import "block/_footer"
 @import "base/_media"
 .container 
     max-width: 950px
